tests/ui/type-alias-impl-trait/issue-57961.stderr
error[E0271]: expected `IntoIter<u32>` to be an iterator that yields `X`, but it yields `u32`
  --> $DIR/issue-57961.rs:10:16
   |
LL | type X = impl Sized;
   |          ---------- the expected opaque type
...
LL |     type Bar = std::vec::IntoIter<u32>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^ expected opaque type, found `u32`
   |
   = note: expected opaque type `X`
                     found type `u32`
note: required by a bound in `Foo::Bar`
  --> $DIR/issue-57961.rs:6:24
   |
LL |     type Bar: Iterator<Item = X>;
   |                        ^^^^^^^^ required by this bound in `Foo::Bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
